--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: "org.sonarqube"
+apply plugin" 'jacoco'
 
 android {
     compileSdkVersion 26
@@ -15,7 +16,15 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            testCoverageEnabled true
         }
+    }
+    
+    unitTests.returnDefaultValues = true
+    unitTests.all {
+        jacoco {
+            includeNoLocationClasses = true
+         }
     }
 }
 
@@ -39,6 +48,8 @@ sonarqube {
         property "sonar.projectName", "tech-olx"
         property "sonar.projectKey", "tech-olx"
         property "sonar.tests", ["src/test/java"]
+        property "sonar.java.coveragePlugin" , "jacoco"
+        property "sonar.jacoco.reportPath", "**/jacoco/*.exec"
         property "sonar.test.inclusions", "**/*Test*/**"
         property "sonar.sourceEncoding", "UTF-8"
         property "sonar.sources", "src/main/java"
@@ -49,3 +60,12 @@ sonarqube {
                   '**/R.class'
                   }
            }
+jacoco {
+    toolVersion = "0.8.4"
+    reportsDir = file("$buildDir/reports")
+}
+
+tasks.withType(Test) {
+    jacoco.includeNoLocationClasses = true
+    }
+    
